fix scripting disabled message alignment

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -32,3 +32,9 @@
     @content;
   }
 }
+
+@mixin scripting-disabled() {
+  @media (scripting: none) {
+    @content;
+  }
+}
